# _Heroes_

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  class_diagram.puml  main.cpp
lib/: Armor.h  ConfigGame.h  Hero.h  HeroBuilder.h
lib/armors/: ArmorType.h  HeavyArmor.h  LightArmor.h
lib/heroes/: HeroType.h  Protos.h  Zerg.h
